--- a/src/de/management/view/views/login.fxml
+++ b/src/de/management/view/views/login.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox alignment="CENTER" prefHeight="720.0" prefWidth="1280.0">
+      <HBox alignment="CENTER" prefHeight="720.0" prefWidth="1280.0" styleClass="background" stylesheets="@../styles/styles.css">
          <children>
             <VBox prefHeight="720.0" prefWidth="960.0" styleClass="dialogs" stylesheets="@../styles/styles.css">
                <children>
@@ -25,7 +25,7 @@
                   <Region prefHeight="107.0" prefWidth="960.0" />
                   <VBox alignment="CENTER" prefHeight="234.0" prefWidth="960.0">
                      <children>
-                        <JFXTextField maxWidth="-Infinity" prefWidth="256.0" promptText="Benutzerkennung" styleClass="loginTextField" unFocusColor="WHITE">
+                        <JFXTextField fx:id="loginNameField" maxWidth="-Infinity" prefWidth="256.0" promptText="Benutzerkennung" styleClass="loginTextField" unFocusColor="WHITE">
                            <VBox.margin>
                               <Insets bottom="15.0" />
                            </VBox.margin>
@@ -33,7 +33,7 @@
                               <Font name="Roboto Black" size="18.0" />
                            </font>
                         </JFXTextField>
-                        <JFXTextField maxWidth="-Infinity" prefWidth="256.0" promptText="Passwort" styleClass="loginTextField" unFocusColor="WHITE">
+                        <JFXTextField fx:id="loginPasswordFiel" maxWidth="-Infinity" prefWidth="256.0" promptText="Passwort" styleClass="loginTextField" unFocusColor="WHITE">
                            <font>
                               <Font name="Roboto Black" size="18.0" />
                            </font>
@@ -41,13 +41,20 @@
                               <Insets bottom="15.0" />
                            </VBox.margin>
                         </JFXTextField>
-                        <JFXButton buttonType="RAISED" prefHeight="48.0" prefWidth="256.0" style="-fx-background-color: #ffffff;" styleClass="loginButton" text="LOGIN" />
+                        <JFXButton fx:id="loginButton" buttonType="RAISED" prefHeight="48.0" prefWidth="256.0" styleClass="loginButton" text="LOGIN" />
                      </children>
                   </VBox>
                </children>
             </VBox>
-            <VBox prefHeight="200.0" prefWidth="320.0" styleClass="background" stylesheets="@../styles/styles.css" />
+            <VBox prefHeight="200.0" prefWidth="320.0" styleClass="navbar" stylesheets="@../styles/styles.css">
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </VBox>
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </HBox>
    </children>
 </AnchorPane>
