--- a/src/de/management/view/views/mitarbeiterDashboard.fxml
+++ b/src/de/management/view/views/mitarbeiterDashboard.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" styleClass="dashBackground" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" styleClass="dashBackground" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.management.controller.MitarbeiterDashboard">
    <children>
       <VBox fx:id="navBar" alignment="TOP_CENTER" prefHeight="1080.0" prefWidth="256.0" styleClass="navbar" stylesheets="@../styles/styles.css">
          <children>
@@ -24,7 +24,7 @@
          </padding></VBox>
       <VBox fx:id="mainFrame" nodeOrientation="RIGHT_TO_LEFT" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
          <children>
-            <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" styleClass="dashDialog">
+            <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0">
                <padding>
                   <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                </padding>
@@ -38,11 +38,18 @@
                         </Label>
                         <Label styleClass="regText" text="Willkommen!" />
                      </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
                   </VBox>
                </children>
                <VBox.margin>
-                  <Insets />
+                  <Insets left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
+               <styleClass>
+                  <String fx:value="dashDialog" />
+                  <String fx:value="shadowed" />
+               </styleClass>
             </HBox>
             <HBox alignment="CENTER" prefHeight="256.0" prefWidth="1664.0">
                <VBox.margin>
@@ -425,7 +432,7 @@
                            </VBox.margin>
                         </Label>
                         <Region prefHeight="10.0" prefWidth="200.0" />
-                        <JFXButton fx:id="anwesenheitButton" buttonType="RAISED" text="Anwesend">
+                        <JFXButton fx:id="anwesenheitButton" buttonType="RAISED" onAction="#toggleAnwesenheit" text="Anwesend">
                            <VBox.margin>
                               <Insets right="10.0" />
                            </VBox.margin>
