--- a/src/de/management/view/views/managerDashboard.fxml
+++ b/src/de/management/view/views/managerDashboard.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.management.controller.ManagerDashboard">
    <children>
       <HBox fx:id="headerContainer" alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="200.0" style="-fx-background-color: #3f51b5;" styleClass="shadow" stylesheets="@../styles/dashboard.css">
          <children>
